--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
         }
         p {
             font-size: 1.2em;
+            color: #ff0000;
         }
     </style>
 </head>
 <body>
     <h2>こんにちわ</h2>
     <h1>げんざいめんてなんすちゅうです</h1>
-    まつって漢字わ小学校の4年生で習うからひらがなで書かざるおえないです
-    <p>まつ下直矢</p>
+    まつって漢字わ小学校の4年生で習うからひらがなで書かざるをおえないです
+    まだ学士3年生だからできないです
+    <p>大学生 まつ下直矢</p>
 </body>
