--- a/grade/2nd.html
+++ b/grade/2nd.html
@@ -30,8 +30,6 @@
 <body>
     <h2>こんにちわ</h2>
     <h1>げんざいめんてなんすちゅうです</h1>
-    まつって漢字わ小学校の4年生で習うからひらがなで書かざるをおえないです
-    <br/>
-    まだ学し3年生だからできないです
+    2年生になったからね、直矢ってかん字で書けるようになったの！
     <p>大学生 まつ下直矢</p>
 </body>
