--- a/grade/index.html
+++ b/grade/index.html
@@ -30,8 +30,5 @@
 <body>
     <h2>こんにちわ</h2>
     <h1>げんざいめんてなんすちゅうです</h1>
-    まつって漢字わ小学校の4年生で習うからひらがなで書かざるをおえないです
-    <br/>
-    まだ学し3年生だからできないです
-    <p>大学生 まつ下直矢</p>
+    <p>東京科学大学(旧東京工業大学) 情報理工学院 情報工学系 学士3年 松下直矢</p>
 </body>
