--- a/grade/4th.html
+++ b/grade/4th.html
@@ -30,8 +30,6 @@
 <body>
     <h2>こんにちわ</h2>
     <h1>げんざいめんてなんすちゅうです</h1>
-    まつって漢字わ小学校の4年生で習うからひらがなで書かざるをおえないです
-    <br/>
-    まだ学し3年生だからできないです
-    <p>大学生 まつ下直矢</p>
+    ついに名前を漢字でかけるようになった！
+    <p>大学生 松下直矢</p>
 </body>
