--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
     </style>
 </head>
 <body>
-    <h2>こんにちわ</h2>
-    <h1>げんざいめんてなんすちゅうです</h1>
-    まつって漢字わ小学校の4年生で習うからひらがなで書かざるをおえないです
+    <h1>こんにちは</h1>
+    <p>はじめまして、松下直矢と申します。</p>
+    東京科学大学(旧東京工業大学) 情報理工学院 情報工学系3年
     <br/>
-    まだ学し3年生だからできないです
-    <p>大学生 まつ下直矢</p>
+    松下直矢
+    <br/>
+    <a href="https://github.com/acanmnm"><img src="img/github-mark.png"/></a>
 </body>
