--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         }
         h1 {
             font-size: 2.5em;
-            color: #d9534f;
         }
         h2 {
             font-size: 1.5em;
@@ -23,16 +22,14 @@
         }
         p {
             font-size: 1.2em;
-            color: #ff0000;
         }
     </style>
 </head>
 <body>
     <h1>こんにちは</h1>
     <p>はじめまして、松下直矢と申します。</p>
-    東京科学大学(旧東京工業大学) 情報理工学院 情報工学系3年
+    <p>まだ特筆すべきものはないですが、これから更新していくつもりです。</p>
+    <small><font color="darkgray">東京科学大学(旧東京工業大学) 情報理工学院 情報工学系 3年 松下直矢</font></small>
     <br/>
-    松下直矢
-    <br/>
-    <a href="https://github.com/acanmnm"><img src="img/github-mark.png"/></a>
+    <a href="https://github.com/acanmnm"><img src="img/github-mark.png"></a>
 </body>
