--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         }
         h1 {
             font-size: 2.5em;
+            color: #d9534f;
         }
         h2 {
             font-size: 1.5em;
@@ -29,7 +30,7 @@
     <h1>こんにちは</h1>
     <p>はじめまして、松下直矢と申します。</p>
     <p>まだ特筆すべきものはないですが、これから更新していくつもりです。</p>
-    <small><font color="darkgray">東京科学大学(旧東京工業大学) 情報理工学院 情報工学系 3年 松下直矢</font></small>
+    <small><font color="dimgray">東京科学大学(旧東京工業大学) 情報理工学院 情報工学系 3年 松下直矢</font></small>
     <br/>
     <a href="https://github.com/acanmnm"><img src="img/github-mark.png"></a>
 </body>
